update bower.json - (bower gave obtuse error when i tried to commit...)

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
   "name": "fpslib",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "./js/main.js",
   "ignore": [
     "**/.*",
     "node_modules",
     "components"
-  ]
+  ],
+  "dependencies": {},
+  "devDependencies": {}
 }
