--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "node_modules",
     "components"
   ],
-  "dependencies": {},
+  "dependencies": {
+      "datgui" : "http://dat-gui.googlecode.com/git/build/dat.gui.min.js"
+  },
   "devDependencies": {}
 }
